<resources>
    <string name="app_name">Rock Beast</string>
    <string name="song_name_example">Song Name</string>
    <string name="song_interpreter_example">Song Interpreter</string>
    <string name="album_example">Album Name</string>
    <string name="song_name">Song Name</string>
    <string name="interpreter_name">Interpreter Name</string>
    <string name="album_name">Album Name</string>
    <string name="feedback_button">Feedback></string>
    <string name="back_button">&lt; Back to library</string>
    <string name="music_library_activity_purpose">Music Library</string>
    <string name="current_song_activity_purpose">Currently Played Song</string>
    <string name="feedback_activity_purpose">Feedback</string>
    <string name="thank_you">Thank you for using our application. Please give us your suggestions and feedback.</string>
</resources>