<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Activity purpose -->
        <TextView
            style="@style/ActivityPurposeTheme"
            android:text="@string/feedback_activity_purpose"/>

        <!-- Get to MainActivity -->
        <Button
            android:id="@+id/button_to_main_activity"
            style="@style/ButtonTheme"
            android:text="@string/back_button"/>
    </RelativeLayout>

    <!-- Image of a guitar -->
    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/guitar"
        android:background="@color/windowBackground"/>

    <!-- Thank you note -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="9dp"
        android:gravity="center_horizontal"
        android:text="@string/thank_you"
        android:maxLines="20"
        android:textAllCaps="true"
        android:textSize="20sp"/>
</LinearLayout>